--- a/.classpath
+++ b/.classpath
@@ -2,12 +2,110 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
-	<classpathentry kind="lib" path="gdal.jar">
-		<attributes>
-			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="GDALTest/so"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="lib" path="libsvm.jar"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/Hadoop"/>
+	<classpathentry kind="lib" path="lib/activation-1.1.jar"/>
+	<classpathentry kind="lib" path="lib/ant.jar"/>
+	<classpathentry kind="lib" path="lib/aopalliance-1.0.jar"/>
+	<classpathentry kind="lib" path="lib/asm-3.2.jar"/>
+	<classpathentry kind="lib" path="lib/avro-1.7.4.jar"/>
+	<classpathentry kind="lib" path="lib/baseTool.jar"/>
+	<classpathentry kind="lib" path="lib/commons-beanutils-1.8.3.jar"/>
+	<classpathentry kind="lib" path="lib/commons-beanutils-core-1.8.0.jar"/>
+	<classpathentry kind="lib" path="lib/commons-cli-1.2.jar"/>
+	<classpathentry kind="lib" path="lib/commons-codec-1.5.jar"/>
+	<classpathentry kind="lib" path="lib/commons-collections-3.2.1.jar"/>
+	<classpathentry kind="lib" path="lib/commons-compress-1.4.1.jar"/>
+	<classpathentry kind="lib" path="lib/commons-configuration-1.6.jar"/>
+	<classpathentry kind="lib" path="lib/commons-daemon-1.0.13.jar"/>
+	<classpathentry kind="lib" path="lib/commons-digester-1.8.jar"/>
+	<classpathentry kind="lib" path="lib/commons-el-1.0.jar"/>
+	<classpathentry kind="lib" path="lib/commons-httpclient-3.1.jar"/>
+	<classpathentry kind="lib" path="lib/commons-io-2.4.jar"/>
+	<classpathentry kind="lib" path="lib/commons-lang-2.6.jar"/>
+	<classpathentry kind="lib" path="lib/commons-logging-1.1.3.jar"/>
+	<classpathentry kind="lib" path="lib/commons-math3-3.1.1.jar"/>
+	<classpathentry kind="lib" path="lib/commons-net-3.1.jar"/>
+	<classpathentry kind="lib" path="lib/couchbase-client-1.4.4.jar"/>
+	<classpathentry kind="lib" path="lib/dom4j-1.6.1.jar"/>
+	<classpathentry kind="lib" path="lib/ezmorph-1.0.6.jar"/>
+	<classpathentry kind="lib" path="lib/ganymed-ssh2-build210.jar"/>
+	<classpathentry kind="lib" path="lib/gdal.jar"/>
+	<classpathentry kind="lib" path="lib/guava-11.0.2.jar"/>
+	<classpathentry kind="lib" path="lib/guice-3.0.jar"/>
+	<classpathentry kind="lib" path="lib/guice-servlet-3.0.jar"/>
+	<classpathentry kind="lib" path="lib/hadoop-annotations-2.3.0.jar"/>
+	<classpathentry kind="lib" path="lib/hadoop-auth-2.3.0.jar"/>
+	<classpathentry kind="lib" path="lib/hadoop-common-2.3.0.jar"/>
+	<classpathentry kind="lib" path="lib/hadoop-hdfs-2.3.0.jar"/>
+	<classpathentry kind="lib" path="lib/hadoop-hdfs-nfs-2.3.0.jar"/>
+	<classpathentry kind="lib" path="lib/hadoop-mapreduce-client-app-2.3.0.jar"/>
+	<classpathentry kind="lib" path="lib/hadoop-mapreduce-client-common-2.3.0.jar"/>
+	<classpathentry kind="lib" path="lib/hadoop-mapreduce-client-core-2.3.0.jar"/>
+	<classpathentry kind="lib" path="lib/hadoop-mapreduce-client-hs-2.3.0.jar"/>
+	<classpathentry kind="lib" path="lib/hadoop-mapreduce-client-hs-plugins-2.3.0.jar"/>
+	<classpathentry kind="lib" path="lib/hadoop-mapreduce-client-jobclient-2.3.0.jar"/>
+	<classpathentry kind="lib" path="lib/hadoop-mapreduce-client-shuffle-2.3.0.jar"/>
+	<classpathentry kind="lib" path="lib/hadoop-mapreduce-examples-2.3.0.jar"/>
+	<classpathentry kind="lib" path="lib/hadoop-nfs-2.3.0.jar"/>
+	<classpathentry kind="lib" path="lib/hadoop-yarn-api-2.3.0.jar"/>
+	<classpathentry kind="lib" path="lib/hadoop-yarn-applications-distributedshell-2.3.0.jar"/>
+	<classpathentry kind="lib" path="lib/hadoop-yarn-applications-unmanaged-am-launcher-2.3.0.jar"/>
+	<classpathentry kind="lib" path="lib/hadoop-yarn-client-2.3.0.jar"/>
+	<classpathentry kind="lib" path="lib/hadoop-yarn-common-2.3.0.jar"/>
+	<classpathentry kind="lib" path="lib/hadoop-yarn-server-common-2.3.0.jar"/>
+	<classpathentry kind="lib" path="lib/hadoop-yarn-server-nodemanager-2.3.0.jar"/>
+	<classpathentry kind="lib" path="lib/hadoop-yarn-server-tests-2.3.0.jar"/>
+	<classpathentry kind="lib" path="lib/hadoop-yarn-server-web-proxy-2.3.0.jar"/>
+	<classpathentry kind="lib" path="lib/hamcrest-core-1.1.jar"/>
+	<classpathentry kind="lib" path="lib/httpclient-4.2.5.jar"/>
+	<classpathentry kind="lib" path="lib/httpcore-4.3.jar"/>
+	<classpathentry kind="lib" path="lib/httpcore-nio-4.3.jar"/>
+	<classpathentry kind="lib" path="lib/jackson-core-asl-1.8.8.jar"/>
+	<classpathentry kind="lib" path="lib/jackson-jaxrs-1.8.8.jar"/>
+	<classpathentry kind="lib" path="lib/jackson-mapper-asl-1.8.8.jar"/>
+	<classpathentry kind="lib" path="lib/jackson-xc-1.8.8.jar"/>
+	<classpathentry kind="lib" path="lib/jasper-compiler-5.5.23.jar"/>
+	<classpathentry kind="lib" path="lib/jasper-runtime-5.5.23.jar"/>
+	<classpathentry kind="lib" path="lib/java-xmlbuilder-0.4.jar"/>
+	<classpathentry kind="lib" path="lib/javatuples-1.2-javadoc.jar"/>
+	<classpathentry kind="lib" path="lib/javatuples-1.2-sources.jar"/>
+	<classpathentry kind="lib" path="lib/javatuples-1.2.jar"/>
+	<classpathentry kind="lib" path="lib/javax.inject-1.jar"/>
+	<classpathentry kind="lib" path="lib/jaxb-api-2.2.2.jar"/>
+	<classpathentry kind="lib" path="lib/jaxb-impl-2.2.3-1.jar"/>
+	<classpathentry kind="lib" path="lib/jaxen-1.1.1.jar"/>
+	<classpathentry kind="lib" path="lib/jersey-client-1.9.jar"/>
+	<classpathentry kind="lib" path="lib/jersey-core-1.9.jar"/>
+	<classpathentry kind="lib" path="lib/jersey-guice-1.9.jar"/>
+	<classpathentry kind="lib" path="lib/jersey-json-1.9.jar"/>
+	<classpathentry kind="lib" path="lib/jersey-server-1.9.jar"/>
+	<classpathentry kind="lib" path="lib/jets3t-0.9.0.jar"/>
+	<classpathentry kind="lib" path="lib/jettison-1.1.jar"/>
+	<classpathentry kind="lib" path="lib/jetty-6.1.26.jar"/>
+	<classpathentry kind="lib" path="lib/jetty-util-6.1.26.jar"/>
+	<classpathentry kind="lib" path="lib/jline-0.9.94.jar"/>
+	<classpathentry kind="lib" path="lib/jsch-0.1.42.jar"/>
+	<classpathentry kind="lib" path="lib/json-lib-2.4-jdk15.jar"/>
+	<classpathentry kind="lib" path="lib/jsp-api-2.1.jar"/>
+	<classpathentry kind="lib" path="lib/jsr305-1.3.9.jar"/>
+	<classpathentry kind="lib" path="lib/junit-4.10.jar"/>
+	<classpathentry kind="lib" path="lib/libsvm.jar"/>
+	<classpathentry kind="lib" path="lib/log4j-1.2.17.jar"/>
+	<classpathentry kind="lib" path="lib/mockito-all-1.8.5.jar"/>
+	<classpathentry kind="lib" path="lib/mongo-2.10.1.jar"/>
+	<classpathentry kind="lib" path="lib/netty-3.6.2.Final.jar"/>
+	<classpathentry kind="lib" path="lib/opencv-2410.jar"/>
+	<classpathentry kind="lib" path="lib/paranamer-2.3.jar"/>
+	<classpathentry kind="lib" path="lib/postgresql-9.3-1101.jdbc41.jar"/>
+	<classpathentry kind="lib" path="lib/protobuf-java-2.5.0.jar"/>
+	<classpathentry kind="lib" path="lib/servlet-api-2.5.jar"/>
+	<classpathentry kind="lib" path="lib/slf4j-api-1.7.5.jar"/>
+	<classpathentry kind="lib" path="lib/slf4j-log4j12-1.7.5.jar"/>
+	<classpathentry kind="lib" path="lib/snappy-java-1.0.4.1.jar"/>
+	<classpathentry kind="lib" path="lib/spymemcached-2.11.4.jar"/>
+	<classpathentry kind="lib" path="lib/stax-api-1.0-2.jar"/>
+	<classpathentry kind="lib" path="lib/xmlenc-0.52.jar"/>
+	<classpathentry kind="lib" path="lib/xom-1.0d10.jar"/>
+	<classpathentry kind="lib" path="lib/xz-1.0.jar"/>
+	<classpathentry kind="lib" path="lib/zookeeper-3.4.5.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
